--- a/default.config.yml
+++ b/default.config.yml
@@ -5,7 +5,7 @@ homebrew_taps:
   - caskroom/versions
   - homebrew/php
 
-homebrew_installed_packages:
+homebrew_packages:
   - ansible
   - ansible-lint
   - awscli
@@ -46,8 +46,7 @@ homebrew_installed_packages:
   - tree
   - watchman
 
-homebrew_cask_appdir: /Applications
-homebrew_cask_apps:
+homebrew_apps:
   - 1password
   - ableton-live-suite
   - adobe-photoshop-cc
@@ -120,3 +119,9 @@ mas_installed_apps:
   - { id: 682658836, name: "GarageBand" }
   - { id: 408981434, name: "iMovie" }
   - { id: 497799835, name: "Xcode" }
+
+npm_pakages:
+  - bower
+  - ember-cli
+  - grunt-cli
+  - gulp-cli
