Fix Homebrew cask

--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -12,7 +12,7 @@
   with_items: "{{ homebrew_packages }}"
 
 - name: Install Homebrew applications
-  homebrew:
+  homebrew_cask:
     name: "{{ item }}"
     state: present
   with_items: "{{ homebrew_apps }}"
