Karabiner => Karabiner Elements

--- a/default.config.yml
+++ b/default.config.yml
@@ -69,7 +69,7 @@ homebrew_apps:
   - handbrake
   - intellij-idea
   - iterm2
-  - karabiner
+  - karabiner-elements
   - keepingyouawake
   - keybase
   - little-snitch
